<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_firstName"
        android:hint="@string/firstname"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_lastName"
        android:hint="@string/lastname"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_address"
        android:hint="@string/address"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_telephone"
        android:hint="@string/telephone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_addCustomer"
        android:text="@string/addcustomer"
        />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_viewall"
        android:text="@string/viewcustomers"
        android:layout_weight="0.02" />





</LinearLayout>
